# Autonomous_Rover

./: docker-compose.yaml  final_audit_log.txt  final_launch_log.txt  frames_2025-10-01_18.48.35.gv  frames_2025-10-01_18.49.28.gv  frames_2025-10-02_05.07.27.gv  my_map_save.pgm  my_map_save.yaml  my_map_serialize.data  new_map_save.pgm  new_map_save.yaml  new_map_serialize.data
install/: local_setup.sh  setup.sh
install/articubot_one/lib/articubot_one/: test_gpio.py
install/articubot_one/share/articubot_one/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  motor_controller.py  package.sh  package.xml
install/articubot_one/share/articubot_one/cmake/: articubot_oneConfig-version.cmake  articubot_oneConfig.cmake
install/articubot_one/share/articubot_one/config/: ball_tracker_params_robot.yaml  ball_tracker_params_sim.yaml  empty.yaml  gaz_ros2_ctl_use_sim.yaml  gazebo_params.yaml  joystick.yaml  main.rviz  map.rviz  mapper_params_online_async.yaml  my_controller.yaml  my_controllers.yaml  twist_mux.yaml
install/articubot_one/share/articubot_one/description/: camera.xacro  depth_camera.xacro  face.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/articubot_one/share/articubot_one/environment/: ament_prefix_path.dsv  path.dsv
install/articubot_one/share/articubot_one/launch/: ball_tracker.launch.py  camera.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  real_hardware.launch.py  rplidar.launch.py
install/articubot_one/share/articubot_one/worlds/: empty.world  obstacles.world
install/articubot_one/share/config/: drive_bot.rviz  mapper_params_online_async.yaml  nav2_params.yaml  new_bot.rviz  view_bot.rviz
install/articubot_one/share/launch/: joystick.launch.py  online_async_slam.launch.py  rsp.launch.py
install/twist_mux/include/twist_mux/: params_helpers.hpp  topic_handle.hpp  twist_mux.hpp  twist_mux_diagnostics.hpp  twist_mux_diagnostics_status.hpp  utils.hpp
install/twist_mux/lib/twist_mux/: joystick_relay.py  twist_marker  twist_mux
install/twist_mux/share/twist_mux/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/twist_mux/share/twist_mux/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  twist_muxConfig-version.cmake  twist_muxConfig.cmake
install/twist_mux/share/twist_mux/config/: joystick.yaml  (+2 more)
log/: latest_build
src/: setup.txt
src/articubot_one/: 1-lidar-patch.patch  2-rplidar.patch  3-ros2control.patch  CMakeLists.txt  package.xml
src/articubot_one/config/: drive_bot.rviz  ekf.yaml  mapper_params_online_async.yaml  new_bot.rviz  twist_mux.yaml  view_bot.rviz
src/articubot_one/description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
src/articubot_one/launch/: imu_filter.launch.py  joystick.launch.py  keyboard.launch.py  launch_robot.launch.py  launch_sim.launch.py  real_hardware.launch.py
src/articubot_one/scripts/: imu_to_odom.py  motor_controller.py  mpu6050_driver.py  test_gpio.py
src/my_robot_description/config/: nav_config.rviz
src/my_robot_description/description/: my_robot.urdf
src/my_robot_description/launch/: gazebo.launch  slam_gmapping.launch  slam_teleop_rviz.launch  teleop.launch  view_navigation.launch
src/my_robot_description/worlds/: empty.world
(+8 files in other folders)
