<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>articubot_one</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="my_email@email.com">Josh Newans</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ========== CORE ROS DEPENDENCIES ========== -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- ========== HARDWARE DEPENDENCIES ========== -->
  <depend>rpi.gpio</depend>
  <depend>rplidar_ros</depend>

  <!-- ========== CONTROL & TELEOP DEPENDENCIES ========== -->
  <depend>teleop_twist_keyboard</depend>
  <depend>twist_mux</depend>

  <!-- ========== IMU & SENSOR FUSION DEPENDENCIES ========== -->
  <depend>imu_filter_madgwick</depend>
  <depend>robot_localization</depend>
  <depend>imu_tools</depend>

  <!-- ========== PYTHON DEPENDENCIES ========== -->
  <exec_depend>python3-smbus2</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- ========== TESTING DEPENDENCIES ========== -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>